# c0rx7-site

./: .gitignore  AUTH_SETUP.md  CNAME  GAME_DESIGN_DOC.md  README.md  SUPABASE_SETUP.md  _headers  _redirects  index.html  manifest.webmanifest  robots.txt  sitemap.xml  supabase-schema.sql  supabase-signals-schema.sql  vercel.json
.github/workflows/: signals-cron.yml
api/: health.js
api/cron/: generate-signals.js
game/: .env.example  .gitignore  ASSETS_FIDELITY_ROADMAP.md  GAME_DESIGN_DOC.md  README.md  index.html  package-lock.json  package.json  supabase-game-schema.sql  tsconfig.json  vite.config.ts
game/assets/blend/: README.md
game/content/lore/heritages/: hjari.md  korr.md  sivit.md  vellish.md
game/content/story/: lullaby-of-hyrr.md
game/programs/escrow/: Anchor.toml  Cargo.toml  README.md
game/programs/escrow/src/: lib.rs
game/server/: Dockerfile  README.md  fly.toml  package.json  tsconfig.json
game/server/src/: index.ts
game/server/src/rooms/: BonkRoom.ts
game/src/: main.tsx
game/src/game/config/: assetManifest.ts
game/src/game/engine/: Engine.ts
game/src/game/scenes/: SceneManager.ts
game/src/game/scenes/arena-bonk/: BonkArenaScene.ts  (+5 more)
game/src/game/shaders/: celMaterial.ts  celShade.ts
game/src/game/ui/: App.tsx
game/src/net/: multiplayer.ts  solanaClient.ts  supabase.ts  wallet.ts
game/src/state/: auth.ts  character.ts  economy.ts  inventory.ts  match.ts  multiplayer.ts  profile.ts  scene.ts  tournament.ts  wallet.ts  walletBeanStore.ts  world.ts
game/tools/blender/: README.md  export-character.py  skeleton-spec.md
(+41 files in other folders)
